# cybersec-club

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt  simple_backend.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: backend.yml  code-quality.yml  frontend.yml
backend/: main.py
backend/api/v1/: router.py
backend/api/v1/endpoints/: admin.py  announcements.py  auth.py  challenges.py  leaderboard.py  submissions.py  users.py
backend/core/: config.py  database.py  deps.py  security.py
backend/models/: achievement.py  announcement.py  audit_log.py  challenge.py  rating_history.py  submission.py  team.py  team_member.py  user.py  user_achievement.py  writeup.py
backend/requirements/: base.txt  dev.txt
backend/schemas/: challenge.py  common.py  user.py
backend/services/: admin_service.py  auth_service.py  challenge_service.py  rating_service.py  user_service.py
database/: init.sql
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  main.jsx
frontend/src/components/challenges/: ChallengeCard.jsx
frontend/src/pages/: ChallengeDetail.jsx  Challenges.jsx  Home.jsx  Leaderboard.jsx  Login.jsx  Profile.jsx  Register.jsx  Wishlist.jsx
frontend/src/services/: api.js
frontend/src/store/: index.js
frontend/src/styles/: index.css
frontend/src/utils/: helpers.js
nginx/: nginx.conf
scripts/: backup.sh  deploy.sh  setup.sh
(+4 files in other folders)
